--- a/templates/slha_io.cpp.in
+++ b/templates/slha_io.cpp.in
@@ -24,7 +24,6 @@
 #include "logger.hpp"
 #include "wrappers.hpp"
 #include "numerics2.hpp"
-#include "spectrum_generator_settings.hpp"
 #include "lowe.h"
 #include "config.h"
 
@@ -268,10 +267,7 @@ void @ModelName@_slha_io::fill(@ModelName@_mass_eigenstates& model) const
  */
 void @ModelName@_slha_io::fill(Spectrum_generator_settings& settings) const
 {
-   SLHA_io::Tuple_processor flexiblesusy_processor
-      = boost::bind(&@ModelName@_slha_io::fill_flexiblesusy_tuple, boost::ref(settings), _1, _2);
-
-   slha_io.read_block("FlexibleSUSY", flexiblesusy_processor);
+   slha_io.fill(settings);
 }
 
 void @ModelName@_slha_io::fill_minpar_tuple(@ModelName@_input_parameters& input,
@@ -284,16 +280,6 @@ void @ModelName@_slha_io::fill_extpar_tuple(@ModelName@_input_parameters& input,
                                                 int key, double value)
 {
 @fillInputParametersFromEXTPAR@
-}
-
-void @ModelName@_slha_io::fill_flexiblesusy_tuple(Spectrum_generator_settings& settings,
-                                                  int key, double value)
-{
-   if (0 <= key && key < static_cast<int>(Spectrum_generator_settings::NUMBER_OF_OPTIONS)) {
-      settings.set((Spectrum_generator_settings::Settings)key, value);
-   } else {
-      WARNING("Unrecognized entry in block FlexibleSUSY: " << key);
-   }
 }
 
 /**
