adding SM particle pole masses to the default output

--- a/model_files/MSSMNoFVatMGUT/FlexibleSUSY.m.in
+++ b/model_files/MSSMNoFVatMGUT/FlexibleSUSY.m.in
@@ -195,7 +195,17 @@ ExtraSLHAOutputBlocks = {
             {1000023, Pole[M[Chi[2]]] },
             {1000025, Pole[M[Chi[3]]] },
             {1000035, Pole[M[Chi[4]]] },
-            {     24, Pole[M[VWm]]    } } }
+            {     24, Pole[M[VWm]]    },
+            {     23, Pole[M[VZ]]     },
+            {      1, Pole[M[Fd]]     },
+            {      2, Pole[M[Fu]]     },
+            {      3, Pole[M[Fs]]     },
+            {      4, Pole[M[Fc]]     },
+            {      5, Pole[M[Fb]]     },
+            {      6, Pole[M[Ft]]     },
+            {     11, Pole[M[Fe]]     },
+            {     13, Pole[M[Fm]]     },
+            {     15, Pole[M[Ftau]]   } } }
 };
 
 TopQuark    = Ft;
