--- a/addons/gm2os/Makefile.in
+++ b/addons/gm2os/Makefile.in
@@ -5,7 +5,7 @@ LIBEXT          := .a
 
 # Variables for compilation
 CXX             := g++
-CPPFLAGS        := -I. -Isrc -Igm2
+CPPFLAGS        := -I. -Igm2 -Islhaea -Isrc
 CXXFLAGS        := -O -std=c++11
 CXX_DEP_GEN     := $(CXX)
 CXXFLAGS_DEP_GEN:= $(CXXFLAGS)
