--- a/config/config.h.in
+++ b/config/config.h.in
@@ -17,6 +17,8 @@
 
 #define MATHEMATICA_VERSION   @MATH_VERSION@
 
+#define GM2CALC_VERSION       "@GM2CALC_VERSION@"
+
 /* System information */
 #define OPERATING_SYSTEM      "@OPERATING_SYSTEM@"
 #define KERNEL_VERSION        "@KERNEL_VERSION@"
