--- a/addons/gm2calc/Makefile.in
+++ b/addons/gm2calc/Makefile.in
@@ -5,11 +5,11 @@ VERSION         := 0.0.0
 # Variables for compilation
 CXX             := g++
 CPPFLAGS        := -I. -Isrc
-CXXFLAGS        := -O -std=c++11
+CXXFLAGS        := -O2 -std=c++11
 CXX_DEP_GEN     := $(CXX)
 CXXFLAGS_DEP_GEN:= $(CXXFLAGS)
 FC              := gfortran
-FFLAGS          := -O -frecursive
+FFLAGS          := -O2 -frecursive
 FLIBS           := -lgfortran -lm
 FOR_DEP_GEN     := $(FC)
 MAKELIB         := ar cru
